Refactor edit task component

--- a/src/components/task/Task.css
+++ b/src/components/task/Task.css
@@ -10,3 +10,11 @@
 .actionWrapper {
   margin-left: auto;
 }
+
+.markCompletedBtn {
+  margin-left: 5px;
+}
+
+.updateTaskBtn {
+  margin-left: 5px;
+}
